--- a/UI/SettingsView.xaml
+++ b/UI/SettingsView.xaml
@@ -60,7 +60,7 @@
     <Grid Margin="60,10,10,10">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="400" />
-            <ColumnDefinition Width="220" />
+            <ColumnDefinition Width="Auto" />
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="{StaticResource RowHeight}" />
@@ -71,6 +71,7 @@
             <RowDefinition Height="{StaticResource HelperRowHeight}" />
             <RowDefinition Height="{StaticResource RowHeight}" />
             <RowDefinition Height="{StaticResource HelperRowHeight}" />
+            <RowDefinition Height="{StaticResource RowHeight}" />
         </Grid.RowDefinitions>
         <!--#region row 0-->
         <StackPanel Grid.Row="0" Style="{DynamicResource StackPanelStyle}">
@@ -139,7 +140,7 @@
         </TextBlock>
         <!--#endregion-->
         <!--#region row 8-->
-        <!-- <StackPanel Grid.Row="8" Style="{DynamicResource StackPanelStyle}">
+        <StackPanel Grid.Row="8" Style="{DynamicResource StackPanelStyle}">
             <TextBlock Style="{DynamicResource TitleStyle}" Text="Create colored icons for notebook and sections." />
         </StackPanel>
         <StackPanel
@@ -148,11 +149,18 @@
             HorizontalAlignment="Left"
             VerticalAlignment="Center"
             Orientation="Horizontal">
-            <ui:ToggleSwitch Style="{DynamicResource ToggleSwitchStyle}" />
-            <Button Margin="10,0,0,0">
-                Delete Cached Images ..MB
+            <ui:ToggleSwitch IsOn="{Binding Settings.CreateColoredIcons}" Style="{DynamicResource ToggleSwitchStyle}" />
+            <Button
+                Margin="0,0,0,0"
+                HorizontalAlignment="Center"
+                HorizontalContentAlignment="Center"
+                Click="ClearCachedIcons">
+                <TextBlock HorizontalAlignment="Center">
+                    <Run Text="Clear Cached Images" />
+                    <Run d:Text="1000 MB" Text="{Binding CachedIconsSize, Mode=OneWay}" />
+                </TextBlock>
             </Button>
-        </StackPanel> -->
+        </StackPanel>
         <!--#endregion-->
     </Grid>
 </UserControl>
