--- a/UI/SettingsView.xaml
+++ b/UI/SettingsView.xaml
@@ -2,6 +2,7 @@
     x:Class="Flow.Launcher.Plugin.OneNote.UI.SettingsView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:componentModel="clr-namespace:System.ComponentModel;assembly=PresentationFramework"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:Flow.Launcher.Plugin.OneNote"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -19,148 +20,179 @@
                 <!--<ui:XamlControlsResources />-->
             </ResourceDictionary.MergedDictionaries>
             <BooleanToVisibilityConverter x:Key="BoolToVis" />
-            <Style x:Key="StackPanelStyle" TargetType="StackPanel">
-                <Setter Property="HorizontalAlignment" Value="Left" />
-                <Setter Property="VerticalAlignment" Value="Center" />
+            <Style
+                x:Key="SideToggleSwitch"
+                BasedOn="{StaticResource DefaultToggleSwitch}"
+                TargetType="{x:Type ui:ToggleSwitch}">
+                <Setter Property="Grid.Column" Value="2" />
+                <Setter Property="FocusVisualMargin" Value="5" />
+                <Setter Property="Width" Value="Auto" />
+                <Setter Property="HorizontalAlignment" Value="Right" />
+                <Setter Property="HorizontalContentAlignment" Value="Right" />
+                <Setter Property="OffContent" Value="{DynamicResource disable}" />
+                <Setter Property="OnContent" Value="{DynamicResource enable}" />
+                <Setter Property="Margin" Value="0,4,22,4" />
+            </Style>
+            <Style x:Key="SettingGrid" TargetType="ItemsControl">
+                <Setter Property="Focusable" Value="False" />
+                <Setter Property="Margin" Value="0" />
+                <Setter Property="ItemsPanel">
+                    <Setter.Value>
+                        <ItemsPanelTemplate>
+                            <Grid>
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition
+                                        Width="Auto"
+                                        MinWidth="20"
+                                        MaxWidth="60" />
+                                    <ColumnDefinition Width="8*" />
+                                    <ColumnDefinition Width="Auto" MinWidth="30" />
+                                </Grid.ColumnDefinitions>
+                            </Grid>
+                        </ItemsPanelTemplate>
+                    </Setter.Value>
+                </Setter>
+            </Style>
+            <Style x:Key="SettingGroupBox" TargetType="{x:Type Border}">
+                <Setter Property="Background" Value="{DynamicResource Color00B}" />
+                <Setter Property="BorderBrush" Value="{DynamicResource Color03B}" />
+                <Setter Property="BorderThickness" Value="1" />
+                <Setter Property="Margin" Value="0,-1,0,0" />
+                <Setter Property="Padding" Value="0,15,0,15" />
+                <Setter Property="SnapsToDevicePixels" Value="True" />
+            </Style>
+            <Style x:Key="Glyph" TargetType="{x:Type ui:FontIcon}">
+                <Style.Triggers>
+                    <Trigger Property="componentModel:DesignerProperties.IsInDesignMode" Value="False">
+                        <Setter Property="FontFamily" Value="/Resources/#Segoe Fluent Icons" />
+                    </Trigger>
+                </Style.Triggers>
                 <Setter Property="Grid.Column" Value="0" />
-            </Style>
-            <Style x:Key="TitleStyle" TargetType="TextBlock">
-                <Setter Property="Margin" Value="0,0,8,0" />
-                <Setter Property="HorizontalAlignment" Value="Left" />
+                <Setter Property="Margin" Value="24,0,16,0" />
                 <Setter Property="VerticalAlignment" Value="Center" />
+                <Setter Property="FontSize" Value="20" />
+                <!--<Setter Property="FontFamily" Value="/Resources/#Segoe Fluent Icons" />-->
+                <Setter Property="Foreground" Value="{DynamicResource Color05B}" />
             </Style>
-            <Style x:Key="HelperTextStyle" TargetType="TextBlock">
+            <Style x:Key="TextPanel" TargetType="{x:Type StackPanel}">
+                <Setter Property="Grid.Column" Value="1" />
+                <Setter Property="Margin" Value="0,0,0,0" />
+                <Setter Property="Width" Value="Auto" />
+                <Setter Property="VerticalAlignment" Value="Center" />
+                <Setter Property="HorizontalAlignment" Value="Left" />
+            </Style>
+            <Style x:Key="SettingTitleLabel" TargetType="{x:Type TextBlock}">
+                <Setter Property="Foreground" Value="{DynamicResource Color05B}" />
+                <Setter Property="Margin" Value="0,0,0,0" />
+                <Setter Property="TextWrapping" Value="Wrap" />
+            </Style>
+            <Style x:Key="SettingSubTitleLabel" TargetType="{x:Type TextBlock}">
                 <Setter Property="Foreground" Value="{DynamicResource Color04B}" />
                 <Setter Property="FontSize" Value="12" />
-                <Setter Property="Margin" Value="0,-4,0,0" />
-                <Setter Property="Grid.ColumnSpan" Value="2" />
-                <Setter Property="Padding" Value="0,0,0,0" />
-                <Setter Property="TextWrapping" Value="Wrap" />
-                <!--<Setter Property="Visibility" Value="Collapsed" />
-                <Style.Triggers>
-                    <DataTrigger Binding="{Binding IsMouseOver, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Grid}}}" Value="True">
-                        <Setter Property="Visibility" Value="Visible" />
-                    </DataTrigger>
-                </Style.Triggers>-->
+                <Setter Property="Margin" Value="0,0,0,0" />
+                <Setter Property="Padding" Value="0,0,24,0" />
+                <Setter Property="TextWrapping" Value="WrapWithOverflow" />
             </Style>
-            <Style x:Key="ToggleSwitchStyle" TargetType="ui:ToggleSwitch">
-                <Setter Property="Grid.Column" Value="1" />
-                <Setter Property="HorizontalAlignment" Value="Left" />
-                <Setter Property="VerticalAlignment" Value="Center" />
-                <Setter Property="HorizontalContentAlignment" Value="Left" />
-                <Setter Property="VerticalContentAlignment" Value="Center" />
-                <Setter Property="OffContent" Value="Off" />
-                <Setter Property="OnContent" Value="On" />
-            </Style>
-            <GridLength x:Key="RowHeight">Auto</GridLength>
-            <GridLength x:Key="HelperRowHeight">22</GridLength>
         </ResourceDictionary>
     </UserControl.Resources>
+    <StackPanel Margin="60,25,25,25">
+        <!--#region Recycle Bin-->
+        <Border CornerRadius="9,9,0,0" Style="{DynamicResource SettingGroupBox}">
+            <ItemsControl Style="{StaticResource SettingGrid}">
+                <StackPanel Style="{StaticResource TextPanel}">
+                    <TextBlock Style="{DynamicResource SettingTitleLabel}" Text="Show recycle bin" />
+                    <TextBlock Style="{DynamicResource SettingSubTitleLabel}">
+                        <Run Text="When using &quot;" />
+                        <Run Text="{x:Static Member=local:Keywords.NotebookExplorer}" />
+                        <Run Text="&quot; show items that are in the recycle bin." />
+                    </TextBlock>
+                </StackPanel>
+                <ui:ToggleSwitch
+                    Grid.Column="2"
+                    IsOn="{Binding Settings.ShowRecycleBin}"
+                    Style="{DynamicResource SideToggleSwitch}" />
+                <Grid>
+                    <!--<ui:FontIcon Glyph="&#xe74d;" Style="{StaticResource Glyph}" />-->
+                    <ui:FontIcon Glyph="&#xe8a5;" Style="{StaticResource Glyph}" />
+                    <ui:FontIcon Glyph="&#xf143;" Style="{StaticResource Glyph}" />
+                </Grid>
+            </ItemsControl>
+        </Border>
+        <!--#endregion-->
 
-    <Grid Margin="60,10,10,10">
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="400" />
-            <ColumnDefinition Width="Auto" />
-        </Grid.ColumnDefinitions>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="{StaticResource RowHeight}" />
-            <RowDefinition Height="{StaticResource HelperRowHeight}" />
-            <RowDefinition Height="{StaticResource RowHeight}" />
-            <RowDefinition Height="{StaticResource HelperRowHeight}" />
-            <RowDefinition Height="{StaticResource RowHeight}" />
-            <RowDefinition Height="{StaticResource HelperRowHeight}" />
-            <RowDefinition Height="{StaticResource RowHeight}" />
-            <RowDefinition Height="{StaticResource HelperRowHeight}" />
-            <RowDefinition Height="{StaticResource RowHeight}" />
-        </Grid.RowDefinitions>
-        <!--#region row 0-->
-        <StackPanel Grid.Row="0" Style="{DynamicResource StackPanelStyle}">
-            <TextBlock Style="{DynamicResource TitleStyle}" Text="Show recycle bin" />
-        </StackPanel>
-        <ui:ToggleSwitch
-            Grid.Row="0"
-            IsOn="{Binding Settings.ShowRecycleBin}"
-            Style="{DynamicResource ToggleSwitchStyle}" />
+        <!--#region Encrypted Sections-->
+        <Border Style="{DynamicResource SettingGroupBox}">
+            <ItemsControl Style="{StaticResource SettingGrid}">
+                <StackPanel Style="{StaticResource TextPanel}">
+                    <TextBlock Style="{DynamicResource SettingTitleLabel}" Text="Show encrypted sections" />
+                    <TextBlock Style="{DynamicResource SettingSubTitleLabel}">
+                        <Run Text="When using &quot;" />
+                        <Run Text="{x:Static Member=local:Keywords.NotebookExplorer}" />
+                        <Run Text="&quot; show encrypted sections, if the section has been unlocked allow temporary access." />
+                    </TextBlock>
+                </StackPanel>
+                <ui:ToggleSwitch
+                    Grid.Column="2"
+                    IsOn="{Binding Settings.ShowEncrypted}"
+                    Style="{DynamicResource SideToggleSwitch}" />
+                <!--  ui:FontIcon Glyph="&#xe785;" Style="{StaticResource Glyph}" /> unlocked icons  -->
+                <ui:FontIcon Glyph="&#xe72e;" Style="{StaticResource Glyph}" />
+            </ItemsControl>
+        </Border>
         <!--#endregion-->
-        <!--#region row 1-->
-        <TextBlock Grid.Row="1" Style="{DynamicResource HelperTextStyle}">
-            <Run Text="When using &quot;" />
-            <Run Text="{x:Static Member=local:Keywords.NotebookExplorer}" />
-            <Run Text="&quot; show items that are in the recycle bin." />
-        </TextBlock>
+
+        <!--#region Unread icons-->
+        <Border Style="{DynamicResource SettingGroupBox}">
+            <ItemsControl Style="{StaticResource SettingGrid}">
+                <StackPanel Style="{StaticResource TextPanel}">
+                    <TextBlock Style="{DynamicResource SettingTitleLabel}" Text="Display unread icon" />
+                    <TextBlock Style="{DynamicResource SettingSubTitleLabel}" Text="Displays a bullet point (&#x2022;) when a item has unread changes." />
+                </StackPanel>
+                <ui:ToggleSwitch
+                    Grid.Column="2"
+                    IsOn="{Binding Settings.ShowUnread}"
+                    Style="{DynamicResource SideToggleSwitch}" />
+                <ui:FontIcon Glyph="&#xe9a9;" Style="{StaticResource Glyph}" />
+            </ItemsControl>
+        </Border>
         <!--#endregion-->
-        <!--#region row 2-->
-        <StackPanel Grid.Row="2" Style="{DynamicResource StackPanelStyle}">
-            <TextBlock Style="{DynamicResource TitleStyle}" Text="Show encrypted sections" />
-        </StackPanel>
-        <ui:ToggleSwitch
-            Grid.Row="2"
-            IsOn="{Binding Settings.ShowEncrypted}"
-            Style="{DynamicResource ToggleSwitchStyle}" />
+
+        <!--#region Coloured icons-->
+        <Border Style="{DynamicResource SettingGroupBox}">
+            <ItemsControl Style="{StaticResource SettingGrid}">
+                <StackPanel Style="{StaticResource TextPanel}">
+                    <TextBlock Style="{DynamicResource SettingTitleLabel}" Text="Create colored icons for notebook and sections" />
+                </StackPanel>
+                <ui:ToggleSwitch
+                    Grid.Column="2"
+                    IsOn="{Binding Settings.CreateColoredIcons}"
+                    Style="{DynamicResource SideToggleSwitch}" />
+                <ui:FontIcon Glyph="&#xe8b9;" Style="{StaticResource Glyph}" />
+            </ItemsControl>
+        </Border>
         <!--#endregion-->
-        <!--#region row 3-->
-        <TextBlock Grid.Row="3" Style="{DynamicResource HelperTextStyle}">
-            <Run Text="When using &quot;" />
-            <Run Text="{x:Static Member=local:Keywords.NotebookExplorer}" />
-            <Run Text="&quot; show encrypted sections, if the section has been unlocked allow temporary access." />
-        </TextBlock>
+
+        <!--#region Recents pages-->
+        <Border CornerRadius="0,0,9,9" Style="{DynamicResource SettingGroupBox}">
+            <ItemsControl Style="{StaticResource SettingGrid}">
+                <StackPanel Style="{StaticResource TextPanel}">
+                    <TextBlock Style="{DynamicResource SettingTitleLabel}" Text="Default number of recent pages" />
+                    <TextBlock Style="{DynamicResource SettingSubTitleLabel}">
+                        <Run Text="The initial number of recent pages to show when using &quot;" />
+                        <Run Text="{x:Static Member=local:Keywords.RecentPages}" />
+                        <Run Text="&quot;." />
+                    </TextBlock>
+                </StackPanel>
+                <ComboBox
+                    Grid.Column="2"
+                    Width="100"
+                    Margin="10,0,18,0"
+                    HorizontalContentAlignment="Center"
+                    ItemsSource="{Binding DefaultRecentCountOptions}"
+                    SelectedItem="{Binding Settings.DefaultRecentsCount}" />
+                <ui:FontIcon Glyph="&#xe823;" Style="{StaticResource Glyph}" />
+            </ItemsControl>
+        </Border>
         <!--#endregion-->
-        <!--#region row 4-->
-        <StackPanel Grid.Row="4" Style="{DynamicResource StackPanelStyle}">
-            <TextBlock Style="{DynamicResource TitleStyle}" Text="Display unread icon" />
-        </StackPanel>
-        <ui:ToggleSwitch
-            Grid.Row="4"
-            IsOn="{Binding Settings.ShowUnread}"
-            Style="{DynamicResource ToggleSwitchStyle}" />
-        <!--#endregion-->
-        <!--#region row 5-->
-        <TextBlock
-            Grid.Row="5"
-            Style="{DynamicResource HelperTextStyle}"
-            Text="Displays a bullet point (&#x2022;) when a item has unread changes." />
-        <!--#endregion-->
-        <!--#region row 6-->
-        <StackPanel Grid.Row="6" Style="{DynamicResource StackPanelStyle}">
-            <TextBlock Style="{DynamicResource TitleStyle}" Text="Default number of recent pages" />
-        </StackPanel>
-        <ComboBox
-            Grid.Row="6"
-            Grid.Column="1"
-            VerticalAlignment="Center"
-            VerticalContentAlignment="Center"
-            ItemsSource="{Binding DefaultRecentCountOptions}"
-            SelectedItem="{Binding Settings.DefaultRecentsCount}" />
-        <!--#endregion-->
-        <!--#region row 7-->
-        <TextBlock Grid.Row="7" Style="{DynamicResource HelperTextStyle}">
-            <Run Text="The initial number of recent pages to show when using &quot;" />
-            <Run Text="{x:Static Member=local:Keywords.RecentPages}" />
-            <Run Text="&quot;." />
-        </TextBlock>
-        <!--#endregion-->
-        <!--#region row 8-->
-        <StackPanel Grid.Row="8" Style="{DynamicResource StackPanelStyle}">
-            <TextBlock Style="{DynamicResource TitleStyle}" Text="Create colored icons for notebook and sections." />
-        </StackPanel>
-        <StackPanel
-            Grid.Row="8"
-            Grid.Column="1"
-            HorizontalAlignment="Left"
-            VerticalAlignment="Center"
-            Orientation="Horizontal">
-            <ui:ToggleSwitch IsOn="{Binding Settings.CreateColoredIcons}" Style="{DynamicResource ToggleSwitchStyle}" />
-            <Button
-                Margin="0,0,0,0"
-                HorizontalAlignment="Center"
-                HorizontalContentAlignment="Center"
-                Click="ClearCachedIcons">
-                <TextBlock HorizontalAlignment="Center">
-                    <Run Text="Clear Cached Images" />
-                    <Run d:Text="1000 MB" Text="{Binding CachedIconsSize, Mode=OneWay}" />
-                </TextBlock>
-            </Button>
-        </StackPanel>
-        <!--#endregion-->
-    </Grid>
+    </StackPanel>
 </UserControl>
