--- a/UI/ChangeKeywordWindow.xaml
+++ b/UI/ChangeKeywordWindow.xaml
@@ -116,7 +116,7 @@
                             FontSize="14"
                             FontWeight="SemiBold"
                             Foreground="{DynamicResource Color05B}"
-                            Text="{Binding SelectedKeyword.KeywordValue}" />
+                            Text="{Binding SelectedKeyword.Keyword}" />
                     </StackPanel>
                     <StackPanel Margin="0,0,0,10" Orientation="Horizontal">
                         <TextBlock
